# koopa

./: CMakeLists.txt  README.md  binary.cpp  build.cpp  build.hpp  combiner.cpp  constants.cpp  io.cpp  koopa-binary.cppm  koopa-combiner.cppm  koopa-constants.cppm  koopa-io.cppm  koopa-matcher.cppm  koopa-str.cppm  koopa-type_traits.cppm  koopa.cppm  matcher.cpp  str.cpp
.github/workflows/: build.yaml
inc/koopa/: binary.hpp  combiner.hpp  constants.hpp  io.hpp  matcher.hpp  str.hpp  type_traits.hpp
src/: binary.cpp  combiner.cpp  io.cpp  matcher.cpp  str.cpp
